--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Saba Shaarbaf-Toosi</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi, my name is Saba Shaarbaf-Toosi.</h1>
+				<p>I am a software engineer and overall lover of the arts.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:sasha2c@gmail.com">email</a></li>
+        		<li><a href="https://github.com/sabato">github.com/sabatoo</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
