--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+	        	<li><a href="/Projects">Projects</a></li>
+        		<li><a href="/Resume">Resume</a></li>
+        		<li><a href="/Experience">Work Experience</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -20,8 +20,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:sasha2c@gmail.com">email</a></li>
-        		<li><a href="https://github.com/sabato">github.com/sabatoo</a></li>
+        		<li>Email me: <a href="mailto:sasha2c@gmail.com">email</a></li>
+        		<li>Github Repo: <a href="https://github.com/sabato">github.com/sabatoo</a></li>
 			</ul>
 		</footer>
 	</body>
