--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/Projects">Projects</a></li>
-        		<li><a href="/Resume">Resume</a></li>
-        		<li><a href="/Experience">Work Experience</a></li>
+                <li><a href="/">Home</a></li>
+	        	<li><a class ="nav-link" href="/projects.html">Projects</a></li>
+        		<li><a class ="nav-link" href="/resume.html">Resume</a></li>
+        		<li><a class ="nav-link" href="/experience.html">Work Experience</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li>Email me: <a href="mailto:sasha2c@gmail.com">email</a></li>
+        		<li>Email me: <a href="mailto:sasha2c@gmail.com">sasha2c@gmail.com</a></li>
         		<li>Github Repo: <a href="https://github.com/sabato">github.com/sabatoo</a></li>
 			</ul>
 		</footer>
