--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li>Email me: <a href="mailto:sasha2c@gmail.com">sasha2c@gmail.com</a></li>
+        		<li>Email: <a href="mailto:sasha2c@gmail.com">sasha2c@gmail.com</a></li>
         		<li>Github Repo: <a href="https://github.com/sabato">github.com/sabatoo</a></li>
 			</ul>
 		</footer>
