--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
                 <li><a href="/">Home</a></li>
 	        	<li><a class ="nav-link" href="/projects.html">Projects</a></li>
         		<li><a class ="nav-link" href="/resume.html">Resume</a></li>
-        		<li><a class ="nav-link" href="/experience.html">Work Experience</a></li>
+				<li><a class ="nav-link" href="/experience.html">Work Experience</a></li>
+				<li><a class ="nav-link" href="/assignments.html">Assignments</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi, my name is Saba Shaarbaf-Toosi.</h1>
+        		<h1>My name is Saba Shaarbaf-Toosi.</h1>
 				<p>I am a software engineer and overall lover of the arts.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
